YTI-107: Adding missing ID for versions to historyModal view.

--- a/src/app/components/common/historyModal.html
+++ b/src/app/components/common/historyModal.html
@@ -21,6 +21,7 @@
     <div class="selectable-items" style="height: 100%">
       <ul style="height: 100%; overflow-y: auto">
         <li ng-repeat="version in $ctrl.versions track by version.id"
+            id="{{version.id}}"
             ng-class="{'selection': $ctrl.isSelected(version)}"
             ng-click="$ctrl.select(version)">
           {{version.createdAt | localizedDate}}
