--- a/src/app/components/common/historyModal.html
+++ b/src/app/components/common/historyModal.html
@@ -2,7 +2,7 @@
 
 <div class="modal-header">
   <h4 class="modal-title">
-    <a><i ng-click="$dismiss('cancel')" class="fas fa-times"></i></a>
+    <a><i id="close_history_view" ng-click="$dismiss('cancel')" class="fas fa-times"></i></a>
     <span translate>Historical versions</span>
   </h4>
 </div>
