YTI-107: Adding another id to the button for closing the history view.

--- a/src/app/components/common/historyModal.html
+++ b/src/app/components/common/historyModal.html
@@ -48,5 +48,5 @@
 </div>
 
 <div class="modal-footer">
-  <button class="btn btn-link" type="button" ng-click="$dismiss('cancel')" translate>Close</button>
+  <button id="close_history_view_button" class="btn btn-link" type="button" ng-click="$dismiss('cancel')" translate>Close</button>
 </div>
