YTI-995: Adding information symbol and help text to subscription enabling / disabling functionality.

--- a/src/app/translations/misc.html
+++ b/src/app/translations/misc.html
@@ -330,3 +330,4 @@
 <div translate>You will receive an email notification when this resource changes.</div>
 <div translate>Add email subscription</div>
 <div translate>Remove email subscription</div>
+<div translate>INFO_TEXT_EMAIL_SUBSCRIPTIONS</div>
