YTI-804 Add mass migrate datamodel resources modal, UNFINISHED

--- a/src/app/components/model/modelMain.html
+++ b/src/app/components/model/modelMain.html
@@ -20,6 +20,7 @@
                              [hasSubscription]="hasSubscription"
                              [entity]="model"
                              [context]="model"
+                             [editing]="editing()"
                              (changeHasSubscription)="changeHasSubscription($event)">
           </model-action-menu>
         </div>
