--- a/src/app/components/common/modelActionMenu.html
+++ b/src/app/components/common/modelActionMenu.html
@@ -20,6 +20,12 @@
             ng-click="$ctrl.removeSubscription()"
             translate>Remove email subscription</button>
 
-  </div>
+    <button id="mass_migrate_datamodel_statuses_button"
+            class="dropdown-item"
+            type="button"
+            ng-click="$ctrl.massMigrateDatamodelStatuses()"
+            ng-hide="$ctrl.editing"
+            translate>Update datamodel's resources' statuses</button>
 
+  </div>
 </div>
