YTI-804 Add translations for mass migration of statuses

--- a/src/app/translations/misc.html
+++ b/src/app/translations/misc.html
@@ -331,3 +331,9 @@
 <div translate>Add email subscription</div>
 <div translate>Remove email subscription</div>
 <div translate>INFO_TEXT_EMAIL_SUBSCRIPTIONS</div>
+<div translate>CHANGE STATUS?</div>
+<div translate>CHANGE_STATUS_CONFIRMATION_PARAGRAPH_1</div>
+<div translate>CHANGE_STATUS_CONFIRMATION_PARAGRAPH_2</div>
+<div translate>Choose starting status</div>
+<div translate>Choose target status</div>
+<div translate>Please wait. This could take a while...</div>
