YTI-1105: Bugfixing Safari compatibility with table modals with flex layout.

--- a/src/styles/shared/searchTableModalContent.scss
+++ b/src/styles/shared/searchTableModalContent.scss
@@ -3,7 +3,7 @@
 div.table-content-container {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: auto;
   min-width: 900px;
   position: relative;
 
