--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1046,3 +1046,7 @@ body.visualization-maximized {
   overflow: hidden;
   text-overflow: ellipsis;
 }
+
+.x-small-item {
+  font-size: x-small;
+}
