YTI-971 Change resource statuses too with model status UNFINISHED
Also show confirmation modal when changing model status to restricted status.

--- a/src/app/components/model/modelView.html
+++ b/src/app/components/model/modelView.html
@@ -8,7 +8,7 @@
                    ng-hide="$ctrl.isEditing()"></history>
         </editable-entity-buttons>
 
-        <model-form id="$ctrl.id" model="$ctrl.editableInEdit" namespaces-in-use="$ctrl.namespacesInUse"></model-form>
+        <model-form id="$ctrl.id" model="$ctrl.editableInEdit" namespaces-in-use="$ctrl.namespacesInUse" status-changed="$ctrl.statusChanged" change-resource-statuses-too="$ctrl.changeResourceStatusesToo"></model-form>
       </div>
     </fieldset>
   </form>
