YTI-971 Change resource statuses too with model status by checkbox
Also change status updating alert modal message text in mass migrate statuses modal,

--- a/src/app/components/model/modelForm.html
+++ b/src/app/components/model/modelForm.html
@@ -24,8 +24,9 @@
       <div class="col-md-4" style="line-height: 45px; white-space: nowrap">
         <div class="checkbox">
           <input id="change_resource_statuses_too_checkbox" type="checkbox" ng-model="$ctrl.changeResourceStatusesToo">
-          <label style="vertical-align: 5%; padding-left: 5px;" for="change_resource_statuses_too_checkbox" translate>Change resource statuses at
-            the same time</label>
+          <label style="vertical-align: 5%; padding-left: 5px;" for="change_resource_statuses_too_checkbox" translate>
+            Change resource statuses as well
+          </label>
         </div>
       </div>
     </div>
