YTI-971 Show the number of resources of starting status in status mass migration modal
Show that number also in information modal when the statuses has changed. Disable Save button when the resourse number of chosen status is zero.

--- a/src/app/components/model/mass-migrate-datamodel-resource-statuses-modal.component.html
+++ b/src/app/components/model/mass-migrate-datamodel-resource-statuses-modal.component.html
@@ -20,10 +20,23 @@
       </div>
     </div>
 
-    <label class="highlight" for="migrate_resource_statuses_from_status_input_dropdown" translate>Starting status</label>
-    <app-filter-dropdown id="migrate_resource_statuses_from_status_input_dropdown"
-                         [options]="fromOptions"
-                         [filterSubject]="fromStatus$"></app-filter-dropdown>
+    <div class="row">
+      <div class="col-12">
+        <label class="highlight" for="migrate_resource_statuses_from_status_input_dropdown" translate>Starting status</label>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-12 col-md-auto">
+        <app-filter-dropdown id="migrate_resource_statuses_from_status_input_dropdown"
+                            [options]="fromOptions"
+                            [filterSubject]="fromStatus$"></app-filter-dropdown>
+      </div>
+      <div class="col-12 col-md">
+        <label *ngIf="showFromStatusResourcesTotal()">{{'Resources:' | translate}} {{fromStatusResourcesTotal}}</label>
+        <app-ajax-loading-indicator-small *ngIf="loadingResourcesTotal"></app-ajax-loading-indicator-small>
+      </div>
+    </div>
 
     <br/>
     <label class="highlight" for="migrate_resource_statuses_to_status_input_dropdown" translate>Target status</label>
