YTI-971 Show confirmation dialog when changing resource statuses too with model status
Also do some refactoring.

--- a/src/app/translations/misc.html
+++ b/src/app/translations/misc.html
@@ -337,3 +337,5 @@
 <div translate>Choose starting status</div>
 <div translate>Choose target status</div>
 <div translate>UPDATING_STATUSES_MESSAGE</div>
+<div translate>Change resource statuses at the same time?</div>
+<div translate>CHANGE RESOURCE STATUSES TOO?</div>
