YTI-1187: Change VRK to DVV

--- a/src/app/components/information/informationAboutServicePage.html
+++ b/src/app/components/information/informationAboutServicePage.html
@@ -1,11 +1,11 @@
 <div class="content-box">
 
   <h1 style="margin-bottom: 40px">Tietoa Tietomalleista</h1>
-  
+
   <p>
     Tietomallit-työkalu on semanttisten tietomallien ylläpito- ja julkaisupalvelu. Se sisältää toimijoille yhteiset tiedon harmonisointiin tarkoitetut tietomääritykset, joita kutsutaan tietokomponenttikirjastoiksi. Lisäksi työkalua hyödynnetään esimerkiksi rajapintojen tai tietovarantojen tietosisältöjen hallinnassa.
   </p>
-  
+
   <p>
     Tietomallit työkalulla organisaatio kuvaa omien tietojärjestelmiensä ja rajapintojensa sisältöä ja rakenteita ns. soveltamisprofiileina.
   </p>
@@ -55,7 +55,7 @@
     <li>
       <a id="interoperability_site_link" href="https://yhteentoimiva.suomi.fi" target="_blank">yhteentoimiva.suomi.fi</a>
     </li>
-    <li>      
+    <li>
       <a id="documentation_link" href="https://confluence.csc.fi/display/VRKYTI/VRK+YTI" target="_blank">
         Yhteinen tiedon hallinta (YTI) -hankkeen dokumentaatio Confluencessa
       </a>
@@ -66,7 +66,7 @@
         yhteinen tiedon hallinta (YTI) -hankkeen sivut
       </a>
     </li>
-    <li>      
+    <li>
       <a id="concept_model_group_link" href="https://wiki.julkict.fi/julkict/juhta/juhta-tyoryhmat-2016/kasitemallit/julkisen-hallinnon-kasitemalliryhma-esittelysivu" target="_blank">
         Julkisen hallinnon käsitemalliryhmän esittelysivu
       </a>
@@ -74,6 +74,6 @@
    </ul>
 
    <h2>Ota yhteyttä</h2>
-   <p>Sähköpostilla osoitteeseen yhteentoimivuus[at]vrk.fi</p>
+   <p>Sähköpostilla osoitteeseen yhteentoimivuus[at]dvv.fi</p>
 
 </div>
