--- a/src/app/components/editor/propertyView.html
+++ b/src/app/components/editor/propertyView.html
@@ -55,7 +55,7 @@
       <editable data-title="Description" context="$ctrl.model">
         <textarea id="{{$ctrl.property.internalId + 'comment'}}" class="form-control" localized-input context="$ctrl.model" ng-model="$ctrl.property.comment"></textarea>
       </editable>
-      <editable-state-select id="{{$ctrl.property.internalId + 'state'}}" state="$ctrl.property.status" model="$ctrl.model"></editable-state-select>
+      <editable-state-select id="propertyState" state="$ctrl.property.status" model="$ctrl.model"></editable-state-select>
     </div>
   </div>
 
