Fix range input ID to more simple in property view
The change might break something in interactive help but it doesn't work properly anyway and is not in production use. ;)

--- a/src/app/components/editor/propertyView.html
+++ b/src/app/components/editor/propertyView.html
@@ -24,7 +24,7 @@
       </editable>
 
       <editable-range-select ng-if="$ctrl.property.isAttribute()"
-                             id="{{$ctrl.property.internalId + 'range'}}"
+                             id="predicateRange"
                              range="$ctrl.property.dataType">
       </editable-range-select>
 
