YTI-1255 Update information about the service page (in Finnish)

--- a/src/app/components/information/informationAboutServicePage.html
+++ b/src/app/components/information/informationAboutServicePage.html
@@ -3,15 +3,14 @@
   <h1 style="margin-bottom: 40px">Tietoa Tietomalleista</h1>
 
   <p>
-    Tietomallit-työkalu on semanttisten tietomallien ylläpito- ja julkaisupalvelu. Se sisältää toimijoille yhteiset tiedon harmonisointiin tarkoitetut tietomääritykset, joita kutsutaan tietokomponenttikirjastoiksi. Lisäksi työkalua hyödynnetään esimerkiksi rajapintojen tai tietovarantojen tietosisältöjen hallinnassa.
+    Tietomallit-työkalu on semanttisten tietomallien ylläpito- ja julkaisupalvelu. Se on yksi neljästä Yhteentoimivuusalustan työkalusta (Sanastot, Koodistot, Tietomallit ja Kommentit).  Työkalu sisältää toimijoille yhteiset tiedon harmonisointiin tarkoitetut tietomääritykset, joita kutsutaan tietokomponenttikirjastoiksi. Lisäksi työkalua hyödynnetään esimerkiksi rajapintojen tai tietovarantojen tietosisältöjen hallinnassa.
+  </p>
+  <p>
+    Tietomallit-työkalulla organisaatio kuvaa omien tietojärjestelmiensä ja rajapintojensa sisältöä ja rakenteita ns. soveltamisprofiileina.
   </p>
 
   <p>
-    Tietomallit työkalulla organisaatio kuvaa omien tietojärjestelmiensä ja rajapintojensa sisältöä ja rakenteita ns. soveltamisprofiileina.
-  </p>
-
-  <p>
-    Tietomallit-työkalu julkaistiin käyttöön tammikuussa 2018. Kehitystyö jatkuu yhteistyössä käyttäjien kanssa.
+    Tietomallit-työkalu julkaistiin tammikuussa 2018. Kehitystyö jatkuu yhteistyössä käyttäjien kanssa.
   </p>
 
   <h2>Tietomallit-työkalu on tarkoitettu</h2>
@@ -20,33 +19,34 @@
     <li>organisaation tietovastaaville</li>
     <li>tietoarkkitehdeille ja tietomallintajille</li>
     <li>jokaiselle, joka etsii tietoa julkisen hallinnon tietovarannoista</li>
-    <li>järjestelmätoimittajille, jotka järjestelmäkehitystyötä varten tarvitsevat tietoa julkisen hallinnon tietovarannoista tai niiden tietorakenteista ja sisällöistä.</li>
+    <li>järjestelmätoimittajille, jotka tarvitsevat järjestelmäkehitystyötä varten tietoa julkisen hallinnon tietovarannoista tai niiden tietorakenteista ja sisällöistä</li>
   </ul>
 
   <h2>Tietomallit-työkalu</h2>
 
   <ul>
     <li>mahdollistaa nykyaikaisten digitaalisten palveluiden taustalla tarvittavan tiedon semanttisen yhteentoimivuuden huomioivan tietomallinnuksen</li>
-    <li>työkalulla kuvataan tietosisältöjä tavalla, jossa tiedon merkitys voidaan sanastojen avulla määritellä</li>
+    <li>työkalulla kuvataan tietosisältöjä tavalla, jossa tiedon merkitys voidaan määritellä sanastojen avulla</li>
     <li>luodaan rajattuja tietomäärityskokonaisuuksia, niin kutsuttuja soveltamisprofiileja, jotka kuvaavat tietojärjestelmän tietosisällön, esimerkiksi rajapinnan toteutukseen</li>
-    <li>Tietomallit-työkalulla luodaan sisältöjä, jotka ovat avointa linkitettyä dataa.</li>
+    <li>Tietomallit-työkalulla luodaan sisältöjä, jotka ovat avointa linkitettyä dataa</li>
   </ul>
 
   <h2>Hyödyt käyttäjille</h2>
 
   <ul>
-    <li>Tietomallit mahdollistavat tiedon semanttisen yhteentoimivuuden formaalilla tavalla.</li>
-    <li>Tietosisällöt ovat sekä ihmis- että koneluettavia.</li>
-    <li>Tietosisällöt ovat avoimesti nähtävillä ja hyödynnettävissä sopimusehtojen mukaisesti.</li>
-    <li>Työkalu mahdollistaa toimijoiden yhteistyön tietomallinnuksessa.</li>
-    <li>Toimijat voivat hyödyntää omassa työssään jo olemassa olevia, harmonisoituja tietosisältöjä.</li>
-    <li>Tietomallit-työkalu mahdollistaa tietosisältöjen linkittämisen ja sitä kautta tiedon linkittämisen toimijoiden valitsemiin kansainvälisiin tai muihin standardeihin.</li>
+    <li>Tietomallit mahdollistavat tiedon semanttisen yhteentoimivuuden formaalilla tavalla</li>
+    <li>Tietosisällöt ovat sekä ihmis- että koneluettavia</li>
+    <li>Tietosisällöt ovat avoimesti nähtävillä ja hyödynnettävissä sopimusehtojen mukaisesti</li>
+    <li>Työkalu mahdollistaa toimijoiden yhteistyön tietomallinnuksessa</li>
+    <li>Toimijat voivat hyödyntää omassa työssään jo olemassa olevia, harmonisoituja tietosisältöjä</li>
+    <li>Tietomallit-työkalu mahdollistaa tietosisältöjen linkittämisen ja sitä kautta tiedon linkittämisen toimijoiden valitsemiin kansainvälisiin tai muihin standardeihin</li>
   </ul>
 
   <h2>Miten voin liittyä työkalun käyttäjäksi?</h2>
 
   <p>
-    Tietomallit-työkalua voi käyttää verkossa osoitteesta <a id="service_link" href="https://tietomallit.suomi.fi" target="_blank">https://tietomallit.suomi.fi</a>. Tietojen muokkaus edellyttää organisaatiokohtaisia käyttöoikeuksia. Liittyminen Tietomallit-työkalun muokkaajaksi on mahdollista yhteentoimivuusalustan oikeuksienhallintasovelluksella.
+    Tietomallit-työkalua voi käyttää verkossa osoitteesta <a id="service_link" href="https://tietomallit.suomi.fi" target="_blank">https://tietomallit.suomi.fi</a>.
+    Tietojen muokkaus edellyttää organisaatiokohtaisia käyttöoikeuksia. Käyttöoikeushakemuksen voi täyttää osoitteessa <a id="application_for_access_link" href="https://yhteentoimiva.suomi.fi/fi/kayttolupahakemus" target="_blank">https://yhteentoimiva.suomi.fi/fi/kayttolupahakemus</a>.
   </p>
 
   <h2>Katso myös</h2>
@@ -56,24 +56,15 @@
       <a id="interoperability_site_link" href="https://yhteentoimiva.suomi.fi" target="_blank">yhteentoimiva.suomi.fi</a>
     </li>
     <li>
-      <a id="documentation_link" href="https://confluence.csc.fi/display/VRKYTI/VRK+YTI" target="_blank">
-        Yhteinen tiedon hallinta (YTI) -hankkeen dokumentaatio Confluencessa
-      </a>
-    </li>
-    <li>
-      VM:n
-      <a id="vm_yti_link" href="http://vm.fi/yhteinen-tiedon-hallinta" target="_blank">
-        yhteinen tiedon hallinta (YTI) -hankkeen sivut
-      </a>
-    </li>
-    <li>
-      <a id="concept_model_group_link" href="https://wiki.julkict.fi/julkict/juhta/juhta-tyoryhmat-2016/kasitemallit/julkisen-hallinnon-kasitemalliryhma-esittelysivu" target="_blank">
-        Julkisen hallinnon käsitemalliryhmän esittelysivu
-      </a>
+      Yhteentoimivuusalustan julkinen dokumentaatio Confluencessa
+      <ul>
+        <li><u>Palvelun käyttöönotto</u> [<a id="service_initialization_link" href="https://wiki.dvv.fi/pages/viewpage.action?pageId=21779517" target="_blank">https://wiki.dvv.fi/pages/viewpage.action?pageId=21779517</a>]</li>
+        <li><u>Käyttöohjeet</u> [<a id="service_instructions_link" href="https://wiki.dvv.fi/pages/viewpage.action?pageId=21783347" target="_blank">https://wiki.dvv.fi/pages/viewpage.action?pageId=21783347</a>]</li>
+      </ul>
     </li>
    </ul>
 
    <h2>Ota yhteyttä</h2>
-   <p>Sähköpostilla osoitteeseen yhteentoimivuus[at]dvv.fi</p>
+   <p>Sähköpostilla osoitteeseen yhteentoimivuus[at]dvv.fi.</p>
 
 </div>
