YTI-1255 Fix links

--- a/src/app/components/information/informationAboutServicePage.html
+++ b/src/app/components/information/informationAboutServicePage.html
@@ -58,8 +58,8 @@
     <li>
       Yhteentoimivuusalustan julkinen dokumentaatio Confluencessa
       <ul>
-        <li><u>Palvelun käyttöönotto</u> [<a id="service_initialization_link" href="https://wiki.dvv.fi/pages/viewpage.action?pageId=21779517" target="_blank">https://wiki.dvv.fi/pages/viewpage.action?pageId=21779517</a>]</li>
-        <li><u>Käyttöohjeet</u> [<a id="service_instructions_link" href="https://wiki.dvv.fi/pages/viewpage.action?pageId=21783347" target="_blank">https://wiki.dvv.fi/pages/viewpage.action?pageId=21783347</a>]</li>
+        <li><a id="service_initialization_link" href="https://wiki.dvv.fi/pages/viewpage.action?pageId=21779517" target="_blank">Palvelun käyttöönotto</a></li>
+        <li><a id="service_instructions_link" href="https://wiki.dvv.fi/pages/viewpage.action?pageId=21783347" target="_blank">Käyttöohjeet</a></li>
       </ul>
     </li>
    </ul>
