YTI-116 Add info texts and translations

--- a/src/app/translations/titles.html
+++ b/src/app/translations/titles.html
@@ -59,6 +59,7 @@
 <div translate>Vocabulary</div><div translate>Vocabulary info</div>
 <div translate>Namespace</div><div translate>Namespace info</div>
 <div translate>Prefix</div><div translate>Prefix info</div>
+<div translate>Previous version</div><div translate>Previous version info</div>
 
 <div translate>Resource identifier</div><div translate>Resource identifier info</div>
 <div translate>Default value</div><div translate>Default value info</div>
