--- a/src/app/translations/misc.html
+++ b/src/app/translations/misc.html
@@ -339,3 +339,4 @@
 <div translate>UPDATING_STATUSES_MESSAGE</div>
 <div translate>Change resource statuses at the same time?</div>
 <div translate>CHANGE RESOURCE STATUSES TOO?</div>
+<div translate>CREATING_NEW_MODEL_VERSION_MESSAGE</div>
