YTI-1289 Add rel="noopener noreferrer" to the links that have target="_blank"

--- a/src/app/components/common/export.html
+++ b/src/app/components/common/export.html
@@ -11,6 +11,7 @@
        ng-attr-id="{{$ctrl.getId('show_' + download.name)}}"
        class="dropdown-item"
        target="_blank"
+       rel="noopener noreferrer"
        ng-href="{{download.hrefRaw}}"
        ng-click="download.onClick()">
       {{download.name | translate}}
