--- a/src/app/components/navigation/navigationBar.html
+++ b/src/app/components/navigation/navigationBar.html
@@ -73,20 +73,20 @@
            translate>User details</a>
         <a id="navigation_interoperability_platform_link"
            class="dropdown-item"
-           ng-href="https://yhteentoimiva.suomi.fi/" target="_blank">yhteentoimiva.suomi.fi</a>
+           ng-href="https://yhteentoimiva.suomi.fi/" target="_blank" rel="noopener noreferrer">yhteentoimiva.suomi.fi</a>
         <a id="navigation_terminologies_link"
            class="dropdown-item"
-           ng-href="{{$ctrl.terminologyUrl}}" target="_blank" translate>Suomi.fi Terminologies</a>
+           ng-href="{{$ctrl.terminologyUrl}}" target="_blank" rel="noopener noreferrer" translate>Suomi.fi Terminologies</a>
         <a id="navigation_reference_data_link"
            class="dropdown-item"
-           ng-href="{{$ctrl.codeListUrl}}" target="_blank" translate>Suomi.fi Reference Data</a>
+           ng-href="{{$ctrl.codeListUrl}}" target="_blank" rel="noopener noreferrer" translate>Suomi.fi Reference Data</a>
         <a id="navigation_comments_link"
            class="dropdown-item"
-          ng-href="{{$ctrl.commentsUrl}}" target="_blank" translate>Suomi.fi Comments</a>
+          ng-href="{{$ctrl.commentsUrl}}" target="_blank" rel="noopener noreferrer" translate>Suomi.fi Comments</a>
         <a id="navigation_groupmanagement_link"
            class="dropdown-item"
            ng-if="$ctrl.showGroupManagementLink()"
-           ng-href="{{$ctrl.groupManagementUrl}}" target="_blank" translate>User right management</a>
+           ng-href="{{$ctrl.groupManagementUrl}}" target="_blank" rel="noopener noreferrer" translate>User right management</a>
       </div>
     </li>
   </ul>
