--- a/src/app/components/userdetails/user-details-subscriptions.component.html
+++ b/src/app/components/userdetails/user-details-subscriptions.component.html
@@ -32,7 +32,8 @@
     <dd>
       <div *ngFor="let resource of messagingResources.get(APPLICATION_CODELIST)">
         <a href="{{ getUriWithEnv(resource.uri) }}"
-           target="_blank"><span>{{ resource.getDisplayName(languageService.createLocalizer()) }}</span></a>
+           target="_blank"
+           rel="noopener noreferrer"><span>{{ resource.getDisplayName(languageService.createLocalizer()) }}</span></a>
         <button [id]="'remove_' + resource.uri + '_ref_button'"
                 type="button"
                 class="icon icon-trash"
@@ -49,7 +50,8 @@
     <dd>
       <div *ngFor="let resource of messagingResources.get(APPLICATION_TERMINOLOGY)">
         <a href="{{ getUriWithEnv(resource.uri) }}"
-           target="_blank"><span>{{ resource.getDisplayName(languageService.createLocalizer()) }}</span></a>
+           target="_blank"
+           rel="noopener noreferrer"><span>{{ resource.getDisplayName(languageService.createLocalizer()) }}</span></a>
         <button [id]="'remove_' + resource.uri + '_ref_button'"
                 type="button"
                 class="icon icon-trash"
@@ -66,7 +68,8 @@
     <dd>
       <div *ngFor="let resource of messagingResources.get(APPLICATION_DATAMODEL)">
         <a href="{{ getUriWithEnv(resource.uri) }}"
-           target="_blank"><span>{{ resource.getDisplayName(languageService.createLocalizer()) }}</span></a>
+           target="_blank"
+           rel="noopener noreferrer"><span>{{ resource.getDisplayName(languageService.createLocalizer()) }}</span></a>
         <button [id]="'remove_' + resource.uri + '_ref_button'"
                 type="button"
                 class="icon icon-trash"
@@ -83,7 +86,8 @@
     <dd>
       <div *ngFor="let resource of messagingResources.get(APPLICATION_COMMENTS)">
         <a href="{{ getUriWithEnv(resource.uri) }}"
-           target="_blank"><span>{{ resource.getDisplayName(languageService.createLocalizer()) }}</span></a>
+           target="_blank"
+           rel="noopener noreferrer"><span>{{ resource.getDisplayName(languageService.createLocalizer()) }}</span></a>
         <button [id]="'remove_' + resource.uri + '_ref_button'"
                 type="button"
                 class="icon icon-trash"
