--- a/src/app/components/editor/classForm.html
+++ b/src/app/components/editor/classForm.html
@@ -134,7 +134,7 @@
   <div class="row">
     <div class="col-md-12">
       <editable data-title="Editorial note" context="$ctrl.model">
-        <textarea id="editorialNote" class="form-control" localized-input="free" context="$ctrl.model" ng-model="$ctrl.class.editorialNote"></textarea>
+        <textarea id="classEditorialNote" class="form-control" localized-input="free" context="$ctrl.model" ng-model="$ctrl.class.editorialNote"></textarea>
       </editable>
     </div>
   </div>
