--- a/src/app/components/editor/predicateForm.html
+++ b/src/app/components/editor/predicateForm.html
@@ -74,7 +74,7 @@
   <div class="row">
     <div class="col-md-12">
       <editable data-title="Editorial note" context="$ctrl.model">
-        <textarea id="editorialNote" class="form-control" localized-input="free" context="$ctrl.model" ng-model="$ctrl.predicate.editorialNote"></textarea>
+        <textarea id="predicateEditorialNote" class="form-control" localized-input="free" context="$ctrl.model" ng-model="$ctrl.predicate.editorialNote"></textarea>
       </editable>
     </div>
   </div>
