--- a/src/app/components/editor/propertyView.html
+++ b/src/app/components/editor/propertyView.html
@@ -190,7 +190,7 @@
     <div class="row">
       <div class="col-md-12">
         <editable data-title="Editorial note" context="$ctrl.model">
-          <textarea id="editorialNote" class="form-control" localized-input="free" context="$ctrl.model" ng-model="$ctrl.property.editorialNote"></textarea>
+          <textarea id="propertyEditorialNote" class="form-control" localized-input="free" context="$ctrl.model" ng-model="$ctrl.property.editorialNote"></textarea>
         </editable>
       </div>
     </div>
