YTI-141 Add external link check and possible icon in editableConstraint just in case

--- a/src/app/components/editor/editableConstraint.html
+++ b/src/app/components/editor/editableConstraint.html
@@ -21,7 +21,10 @@
         <editable-label data-title="'Constraint classes'"></editable-label>
 
         <span ng-if="!$ctrl.isEditing()" ng-repeat="item in $ctrl.constraint.items">
-          <a ng-href="{{$ctrl.linkItem(item)}}">{{item | translateLabel: $ctrl.model}}</a>
+          <a ng-href="{{$ctrl.linkItem(item)}}">
+            {{item | translateLabel: $ctrl.model}}
+            <i ng-if="$ctrl.isExternalLink($ctrl.linkItem(item))" class="fas fa-external-link-alt x-small-item"></i>
+          </a>
           <span ng-if="!$last">&nbsp;{{$ctrl.constraint.constraint}}&nbsp;</span>
         </span>
 
