--- a/src/app/components/model/editableRootClass.html
+++ b/src/app/components/model/editableRootClass.html
@@ -2,7 +2,7 @@
   <div style="clear: both">
     <editable-label ng-show="$ctrl.model.rootClass || $ctrl.isEditing()" data-title="'Root class'"></editable-label>
     <span ng-show="$ctrl.isEditing() && !$ctrl.model.rootClass" translate>Not selected</span>
-    <a ng-if="$ctrl.model.rootClass" ng-href="{{$ctrl.href}}">{{$ctrl.model.rootClass.compact}}</a>
+    <span ng-if="$ctrl.model.rootClass">{{$ctrl.model.rootClass.compact}}</span>
   </div>
   <button ng-show="$ctrl.isEditing()" type="button" class="btn btn-action btn-sm" ng-click="$ctrl.selectClass()" translate>Choose root class</button>
   <button ng-show="$ctrl.isEditing() && $ctrl.model.rootClass" type="button" class="btn btn-action btn-sm" ng-click="$ctrl.removeClass()" translate>Clear selection</button>
