YTI-1350: Fixing earlier WP directed link to Confluence and removing registration link from info page.

--- a/src/app/components/information/informationAboutServicePage.html
+++ b/src/app/components/information/informationAboutServicePage.html
@@ -46,7 +46,7 @@
 
   <p>
     Tietomallit-työkalua voi käyttää verkossa osoitteesta <a id="service_link" href="https://tietomallit.suomi.fi" target="_blank" rel="noopener noreferrer">https://tietomallit.suomi.fi</a>.
-    Tietojen muokkaus edellyttää organisaatiokohtaisia käyttöoikeuksia. Käyttöoikeushakemuksen voi täyttää osoitteessa <a id="application_for_access_link" href="https://yhteentoimiva.suomi.fi/fi/kayttolupahakemus" target="_blank" rel="noopener noreferrer">https://yhteentoimiva.suomi.fi/fi/kayttolupahakemus</a>.
+    Tietojen muokkaus edellyttää organisaatiokohtaisia käyttöoikeuksia.
   </p>
 
   <h2>Katso myös</h2>
